force-app/main/default/objects/Product__c/fields/Applicable_Coverage_Tier__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Coverage_Tier__c</fullName>
    <label>Applicable Coverage Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApplicableCoverageTier</valueSetName>
    </valueSet>
</CustomField>