force-app/main/default/objects/Product__c/fields/Deductible_Amounts_Are__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amounts_Are__c</fullName>
    <label>Deductible Amounts Are</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deductible_Amounts_Are</valueSetName>
    </valueSet>
</CustomField>