force-app/main/default/objects/Product__c/fields/DeductiblesForSpecificServices__c.field-meta.xml
<CustomField>
    <fullName>DeductiblesForSpecificServices__c</fullName>
    <label>Deductibles For Specific Services?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>