force-app/main/default/objects/Product__c/fields/Funding_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Funding_Arrangement__c</fullName>
    <label>Funding Arrangement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funding_Arrangement</valueSetName>
    </valueSet>
</CustomField>