force-app/main/default/objects/Product__c/fields/Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Group_Size__c</fullName>
    <label>Group Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GroupSize</valueSetName>
    </valueSet>
</CustomField>