force-app/main/default/objects/Product__c/fields/IncludeCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>IncludeCreditAmount__c</fullName>
    <label>Include Credit Amount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>