force-app/main/default/objects/Product__c/fields/IncludeSecondaryMaxOutOfPocket__c.field-meta.xml
<CustomField>
    <fullName>IncludeSecondaryMaxOutOfPocket__c</fullName>
    <label>Include Secondary Max Out of Pocket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>