force-app/main/default/objects/Product__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <label>Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>