force-app/main/default/objects/Product__c/fields/Member_Funding__c.field-meta.xml
<CustomField>
    <fullName>Member_Funding__c</fullName>
    <label>Member Funding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Member_Funding</valueSetName>
    </valueSet>
</CustomField>