force-app/main/default/objects/Product__c/fields/Product_Regulatory_Approval__c.field-meta.xml
<CustomField>
    <fullName>Product_Regulatory_Approval__c</fullName>
    <label>Product Regulatory Approval</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_regulatory_Approval</valueSetName>
    </valueSet>
</CustomField>