force-app/main/default/objects/Product__c/fields/ProductRegulatoryDate__c.field-meta.xml
<CustomField>
    <fullName>ProductRegulatoryDate__c</fullName>
    <label>Product Regulatory Date</label>
    <type>Date</type>
</CustomField>