force-app/main/default/objects/Product__c/fields/Provider_Tier__c.field-meta.xml
<CustomField>
    <fullName>Provider_Tier__c</fullName>
    <label>Provider Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provider_Tier</valueSetName>
    </valueSet>
</CustomField>