force-app/main/default/objects/Product__c/fields/ProviderNetwork__c.field-meta.xml
<CustomField>
    <fullName>ProviderNetwork__c</fullName>
    <label>Provider Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>