force-app/main/default/objects/Product__c/fields/ProviderNetworkLink__c.field-meta.xml
<CustomField>
    <fullName>ProviderNetworkLink__c</fullName>
    <label>Provider Network Link</label>
    <type>Url</type>
</CustomField>