force-app/main/default/objects/Product__c/fields/ProviderNetworkPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ProviderNetworkPhoneNumber__c</fullName>
    <label>Provider Network Phone Number</label>
    <type>Phone</type>
</CustomField>