force-app/main/default/objects/Product__c/fields/SBCDisclaimerWebsite__c.field-meta.xml
<CustomField>
    <fullName>SBCDisclaimerWebsite__c</fullName>
    <label>SBC Disclaimer Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>